--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "gulp-uglify" : "^1.4.0",
     "lodash.assign" : "^3.2.0",
     "gulp-concat" : "^2.6.0",
-    "browserify-shim" : "^3.8.10"
+    "browserify-shim" : "^3.8.10",
+    "underscore": "^1.7.0"
   },
   "browserify-shim": {
     "rune.js": "global:Rune"
