--- a/package.json
+++ b/package.json
@@ -1,15 +1,12 @@
 {
   "name": "rune.font.js",
-  "version" : "0.0.1",
+  "version" : "0.0.2",
   "description": "Plugin for Rune.js that gives access to webfont vectors.",
   "repository": {
     "type": "git",
     "url": "git://github.com/runemadsen/rune.font.js"
   },
-  "main" : "dist/font.node.js",
-  "files" : [
-    "font.js"
-  ],
+  "main" : "src/font.js",
   "author": "runemadsen",
   "license": "MIT",
   "bugs": {
@@ -25,15 +22,8 @@
     "browserify": "^11.0.0",
     "vinyl-source-stream" : "^1.1.0",
     "vinyl-buffer" : "^1.0.0",
-    "babelify" : "^6.2.0",
-    "gulp-rename" : "^1.2.2",
-    "gulp-zip" : "^3.0.2",
-    "gulp-tar" : "^1.4.0",
-    "gulp-gzip" : "^1.2.0",
-    "open" : "^0.0.5",
     "gulp-jasmine" : "^2.1.0",
     "gulp-jasmine-browser" : "^0.2.3",
-    "gulp-sourcemaps" : "^1.5.2",
     "gulp-uglify" : "^1.4.0",
     "lodash.assign" : "^3.2.0",
     "gulp-concat" : "^2.6.0",
