--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "vinyl-buffer" : "^1.0.0",
     "gulp-jasmine" : "^2.1.0",
     "gulp-jasmine-browser" : "^0.2.3",
+    "gulp-rename": "^1.2.2",
     "gulp-uglify" : "^1.4.0",
+    "gulp-uglify": "^1.4.0",
     "lodash.assign" : "^3.2.0",
     "gulp-concat" : "^2.6.0",
     "browserify-shim" : "^3.8.10",
